--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,6 @@
   padding: 0;
 }
 
-html {
-  width: 100%;
-}
-
 .result, .time {
   display: flex;
   justify-content: center;
@@ -33,51 +29,26 @@ html {
   gap: 100px;
 }
 
-.buttons {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin: 0;
-  border: 2px solid #EED0B2;
-  padding: 0;
-  display: inline-block;
-  position: center;
-  cursor: pointer;
-}
-
 .reset, .home {
   background-color: #F6A347;
   color: #010A74;
   font-weight: bold;
 }
 
-.rules {
-  margin: 35px;
-}
-
-* {
-  font-family: "Luckiest Guy", cursive;
-  font-weight: 400;
-  font-style: normal;
-  box-sizing: border-box;
-  margin: 0%;
-  padding: 0%;
-}
-
 html {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .bg {
   width: 100%;
-  height: auto;
+  height: 100%;
   background-image: url(./main-page/Images/PPT_ELEMENTOS-01-mobile.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-a {
+i {
   color: #010A74;
 }
 
@@ -86,21 +57,22 @@ a {
   justify-content: space-around;
   gap: 65%;
   align-items: center;
-  margin-top: 2%;
+  margin-top: 4%;
 }
 
 .controls-buttons {
   text-align: center;
-  display: inline-block;
+  display: flex;
   align-items: center;
-  width: 50px;
-  height: 50px;
-  font-size: 21px;
+  justify-content: center; /* Añadido para centrar el contenido */
+  width: 3.2rem; /* Aproximadamente 50px */
+  height: 3.2rem; /* Aproximadamente 50px */
+  font-size: 1.5rem; /* Aproximadamente 21px */
   background-color: #F6A347;
   border-radius: 50%;
-  padding: 10px;
-  margin: 0px;
-  border: #EED0B2 3px solid;
+  padding: 1rem; /* Aproximadamente 10px */
+  margin: 0;
+  border: 0.2rem solid #EED0B2; /* Aproximadamente 3px */
   cursor: pointer;
 }
 
@@ -119,18 +91,10 @@ img {
 }
 
 .logo {
-  margin-top: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 176px;
-}
-
-.info {
-  width: 5%;
-  margin-left: 30px;
-  /* margin-right: 120px; */
-  display: flex;
+  height: 11rem; /* Convertido de 176px a 11rem */
 }
 
 .input-button {
@@ -149,10 +113,9 @@ form {
 
 .input-player {
   text-align: center;
-  font-size: 20px;
-  width: 274px;
-  height: 41px;
-  display: flex;
+  font-size: 1.25rem; /* Aproximadamente 20px */
+  width: 20rem; /* Aproximadamente 274px */
+  height: 2.5rem; /* Aproximadamente 41px */
   background-color: #EED0B2;
   border: #F6A347 3px solid;
   border-radius: 32px;
@@ -163,14 +126,12 @@ form {
 }
 
 .play-father {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   background-color: #F6A347;
   border-radius: 30px;
   border: #EED0B2 3px solid;
-  width: 123px;
-  height: 41px;
+  width: 8rem;
+  height: 2.5rem;
   margin-right: 150px;
 }
 
@@ -182,6 +143,7 @@ form {
 .play {
   border: none;
   align-items: center;
+  text-align: center;
   font-size: 32px;
   background: linear-gradient(#EB1A7E, #010A74);
   -webkit-background-clip: text;
@@ -220,21 +182,18 @@ footer {
 }
 
 .button-rules-info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 50px;
-  height: 50px;
+  width: 3.2rem; /* Aproximadamente 50px */
+  height: 3.2rem;
   background-color: #F6A347;
   border-radius: 50px;
-  border: 2px solid #EED0B2;
+  border: 0.2rem solid #EED0B2;
   cursor: pointer;
-  /* para que el svg se ajuste al tamaño del botón */
+  margin-left: 6%;
 }
-.button-rules-info svg {
-  width: 80%;
-  height: 80%;
+
+#icon {
+  width: 2rem; /* Ajusta el tamaño según tus necesidades */
+  height: 2rem;
 }
 
 .container-rules {
@@ -296,14 +255,6 @@ li {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-}
-
-.button-rules-info {
-  width: 50px; /* Default width */
-  position: relative;
-  left: auto;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /*# sourceMappingURL=styles.css.map */
