--- a/styles.css
+++ b/styles.css
@@ -82,10 +82,11 @@ a {
 
 .controls {
   display: flex;
-  justify-content: space-around;
-  gap: 600px;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
+  margin-right: 8px;
+  margin-left: 20px;
+  padding: 15px;
 }
 
 .controls-buttons {
@@ -109,7 +110,7 @@ a {
 }
 
 .button:active {
-  transform: scale(1.1);
+  transform: scale(1.5);
 }
 
 img {
@@ -118,7 +119,7 @@ img {
 }
 
 .logo {
-  margin-top: 30px;
+  margin-top: -10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -129,6 +130,10 @@ footer {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  position: relative;
+  margin-right: 50px;
 }
 
 .info {
@@ -139,15 +144,18 @@ footer {
 }
 
 .input-button {
-  width: 90%;
+  width: 60%;
   display: flex;
-  justify-content: center;
-  gap: 20px;
+  margin-bottom: 20px;
 }
 
 form {
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-right: -50px;
+  margin-left: -10%;
 }
 
 .input-player {
@@ -159,6 +167,7 @@ form {
   background-color: #EED0B2;
   border: #F6A347 3px solid;
   border-radius: 32px;
+  margin: 0 auto;
 }
 
 .input-player::placeholder {
@@ -173,12 +182,13 @@ form {
   background-color: #F6A347;
   border-radius: 30px;
   border: #EED0B2 3px solid;
-  width: 123px;
+  width: 160px;
   height: 41px;
+  margin: 0 auto;
 }
 
 .play-father:hover {
-  background-color: #f6bc7a;
+  background-color: #EED0B2;
   cursor: pointer;
 }
 
@@ -186,7 +196,6 @@ form {
   padding-bottom: 15px;
   border: none;
   flex: 1;
-  flex-grow: 1;
   align-items: center;
   font-size: 32px;
   border-radius: 20px;
@@ -230,11 +239,12 @@ form {
   border-radius: 50px;
   border: 2px solid #EED0B2;
   cursor: pointer;
+  margin: 15px;
   /* para que el svg se ajuste al tamaño del botón */
 }
 .button-rules-info svg {
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: 90%;
 }
 
 .container-rules {
@@ -246,6 +256,8 @@ form {
   background-color: #EED0B2;
   border: 2px solid #F6A347;
   border-radius: 20px;
+  margin-left: 15%;
+  margin-top: 5%;
 }
 
 h1 {
@@ -286,7 +298,7 @@ li {
   background-color: #F6A347;
   color: #010A74;
   border-radius: 50px;
-  border: 2px solid #EED0B2; /* Borde de color crema */
+  border: 2px solid #EED0B2;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
   outline: none; /* Elimina el contorno al enfocarse */
@@ -298,12 +310,12 @@ li {
   text-align: center;
 }
 
-.button-rules-info {
-  width: 50px; /* Default width */
-  position: relative;
-  left: auto;
-  margin-left: auto;
-  margin-right: auto;
-}
+/*.button-rules-info {
+    width: 50px; /* Default width */
+/*position: relative;
+    left: auto;
+    margin-left: auto;
+    margin-right: auto;
+}*/
 
 /*# sourceMappingURL=styles.css.map */
