--- a/style_game.css
+++ b/style_game.css
@@ -171,7 +171,7 @@ p, h1 {
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
-  animation: leftHands_move 1.5s linear 5;
+  animation: leftHands_move 1.5s linear infinite;
 }
 
 .rightHand {
@@ -180,7 +180,7 @@ p, h1 {
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
-  animation: rightHands_move 1.5s linear 5;
+  animation: rightHands_move 1.5s linear infinite;
 }
 
 @keyframes leftHands_move {
@@ -244,6 +244,7 @@ p, h1 {
   font-size: 120px;
   color: white;
   transition: color 0.2s ease;
+  margin-top: -5%;
 }
 
 @keyframes countdown {
@@ -277,18 +278,34 @@ p, h1 {
   border-radius: 20%;
 }
 
-.piedra, .papel, .tijeras {
+.selector {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid #EED0B2;
+  position: center;
+  cursor: pointer;
   background-color: #188CCC;
+  margin-top: -5%;
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+.selector img {
+  width: 95%;
+  height: auto;
 }
 
 .selectsUser {
   display: flex;
   justify-content: center;
   gap: 19px;
-  margin-top: -5%;
+  margin-top: -30px;
 }
 
-.result, .time {
+.result {
   display: flex;
   justify-content: center;
   font-size: 150px;
@@ -320,15 +337,6 @@ p, h1 {
   background-color: #F6A347;
   color: #010A74;
   font-weight: bold;
-}
-
-.rules {
-  margin: 35px;
-}
-
-.cerrarppv {
-  margin-top: 30px;
-  margin-left: 300px;
 }
 
 .close:active, .sound:active {
