--- a/style_game.scss
+++ b/style_game.scss
@@ -119,7 +119,7 @@ p, h1{
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
-  animation: leftHands_move 1.5s linear 5;
+  animation: leftHands_move 1.5s linear infinite;
 }
 
 .rightHand{
@@ -128,7 +128,7 @@ p, h1{
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
-  animation: rightHands_move 1.5s linear 5;
+  animation: rightHands_move 1.5s linear infinite;
 }
 
 @keyframes leftHands_move {
@@ -176,6 +176,7 @@ p, h1{
   font-size: 120px;
   color: white;
   transition: color 0.2s ease;
+  margin-top: -5%;
 }
 
 @keyframes countdown {
@@ -210,11 +211,18 @@ p, h1{
   border-radius: 20%;
 }
 
-.piedra, .papel, .tijeras{
+.selector{
+  width: 50px;
+  height: 50px;
+  border-radius:50%;
+  border: 2px solid $cream-color;
+  position:center;
+  cursor: pointer;
   background-color:$blue-color; 
+  margin-top: -5%;
 }
 
-button:active {
+button:active, {
   transform: scale(0.95);
 }
 
@@ -227,7 +235,7 @@ button:active {
   display: flex;
   justify-content: center;
   gap: 19px;
-  margin-top: -5%;
+  margin-top: -30px;
 }
 
 .result {
