--- a/style_game.css
+++ b/style_game.css
@@ -343,7 +343,7 @@ button:active {
   transform: scale(0.95);
 }
 
-@media only screen and (max-width: 1025px) {
+@media (min-width: 846px) and (max-width: 1025px) {
   .bg {
     background-image: url(./main-page/Images/PPT\ ELEMENTOS-01.png);
     background-repeat: no-repeat;
