--- a/styles.css
+++ b/styles.css
@@ -317,5 +317,21 @@ li {
     margin-left: auto;
     margin-right: auto;
 }*/
+@media (min-width: 846px) and (max-width: 1025px) {
+  .bg {
+    background-image: url(./main-page/Images/PPT\ ELEMENTOS-01.png);
+    background-repeat: no-repeat;
+  }
+  .selector {
+    margin-top: 32%;
+  }
+  .timer {
+    margin-top: -20px;
+  }
+  .hands {
+    margin-top: 10%;
+    margin-bottom: -25%;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
