--- a/styles.scss
+++ b/styles.scss
@@ -251,3 +251,24 @@ li {
 }*/
 
 
+@media (min-width: 846px) and (max-width: 1025px){
+.bg{
+    background-image: url(./main-page/Images/PPT\ ELEMENTOS-01.png);
+    background-repeat:no-repeat;
+}
+
+.selector{
+    margin-top: 32%;
+}
+
+.timer {
+    margin-top:-20px;
+}
+
+.hands{
+    margin-top: 10%;
+    margin-bottom: -25%;
+}
+
+}
+
