--- a/styles.scss
+++ b/styles.scss
@@ -18,7 +18,7 @@ html{
     background-size: cover;
     background-repeat: no-repeat;
 }
-a{
+i{
     color: $dark-blue-color;
 }
 .controls{
@@ -65,6 +65,25 @@ img{
     align-items: center;
     height: 176px;
 }
+
+.logo img {
+    animation: bounce 1s;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+    40% { transform: translateY(-30px); }
+    60% { transform: translateY(-15px); }
+}
+
+@keyframes blink {
+    0%, 50%, 100% { opacity: 1; }
+    25%, 75% { opacity: 0.5; }
+}
+
 footer{
     width: 100%;
     display: flex;
@@ -81,11 +100,12 @@ footer{
     display: flex;
 }
 .input-button{
-    width: 60%;
+    width: 55%;
     display: flex;
-    //*justify-content:space-around;
-    //*gap: 10px;
+    justify-content:space-around;
+    //gap: 10px;
     margin-bottom: 20px;
+    margin-right: 155px;
 }
 
 form{
@@ -120,7 +140,7 @@ form{
     background-color: $yellow-color;
     border-radius: 30px;
     border: $cream-color 3px solid;
-    width: 160px ;
+    width: 130px ;
     height:41px;
     margin: 0 auto;
 }
@@ -240,7 +260,9 @@ li {
     text-align: center;
 }
 
-
+.transformed{
+    transform: rotate(180deg);
+}
 
 /*.button-rules-info {
     width: 50px; /* Default width */
@@ -255,19 +277,6 @@ li {
 .bg{
     background-image: url(./main-page/Images/PPT\ ELEMENTOS-01.png);
     background-repeat:no-repeat;
-}
-
-.selector{
-    margin-top: 32%;
-}
-
-.timer {
-    margin-top:-20px;
-}
-
-.hands{
-    margin-top: 10%;
-    margin-bottom: -25%;
 }
 
 }
