--- a/style_game.css
+++ b/style_game.css
@@ -364,14 +364,17 @@ button:active {
     background-repeat: no-repeat;
   }
   .selector {
-    margin-top: 32%;
+    margin-top: 48%;
   }
   .timer {
-    margin-top: -20px;
+    margin-top: -30px;
   }
   .hands {
     margin-top: 10%;
     margin-bottom: -25%;
+  }
+  .start {
+    margin-bottom: -18%;
   }
 }
 
