--- a/style_game.scss
+++ b/style_game.scss
@@ -300,16 +300,20 @@ button:active {
 }
 
 .selector{
-  margin-top: 32%;
+  margin-top: 48%;
 }
 
 .timer {
-  margin-top:-20px;
+  margin-top:-30px;
 }
 
 .hands{
 margin-top: 10%;
 margin-bottom: -25%;
+}
+
+.start {
+  margin-bottom: -18%;
 }
 
 }
