--- a/style_game.scss
+++ b/style_game.scss
@@ -144,6 +144,9 @@ p, h1{
   66% {background-image: url(/game-page/img/PPT\ ELEMENTOS-tijera\ der.png);background-size: 100%;}
 }
 
+
+//*Timer
+
 .start{
   display: flex;
   justify-content: center;
@@ -268,13 +271,13 @@ button:active {
   gap:100px;
 }
 
-.close, .sound, .reset, .home, .rules{
+.close {
   background-color:$yellow-color ;
   color:$dark-blue-color;
   font-weight: bold;
 }
 
-.close:active, .sound:active {
+.close:active {
   transform: scale(0.95);
 }
   
@@ -287,7 +290,6 @@ button:active {
   color: #F6A347;
   font-size: 32px;
   text-align: center;
- 
   background-color: transparent;
   backdrop-filter: blur(20px);
   padding: 100px;
